@@ -188,7 +188,7 @@ static const struct menu_item_entries menu_item_lookup[] = {
 
   { UI_MENU_ITEM_FILE_MOVIES_RECORDING, "/File/Movies/Stop Movie Recording",
     "/File/Movies/Record Movie as SCR...", 1,
-#ifdef USE_PNG
+#ifdef USE_LIBPNG
     "/File/Movies/Record Movie as PNG...", 1,
 #endif
   },
